@@ -497,7 +497,7 @@ int autoCreate(char *c_area, s_addr pktOrigAddr, char *desc)
    sprintf(buff, "FileArea %s %s%s -a %s ",
            c_area,
            config->fileAreaBaseDir,
-           fileechoFileName,
+           (stricmp(config->fileAreaBaseDir,"Passthrough") == 0) ? "" : fileechoFileName,
            myaddr);
 
    if (creatingLink->autoFileCreateDefaults) {
